--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "next": "14.1.4",
+    "node-html-parser": "^7.0.1",
     "nodemailer": "^6.9.14",
     "novel": "^0.5.0",
     "novel-lightweight": "^0.2.1",
